--- a/challenge/pom.xml
+++ b/challenge/pom.xml
@@ -7,6 +7,10 @@
 	<version>1</version>
 	<name>challenge</name>
 	<url>http://maven.apache.org</url>
+
+	<properties>
+		<mockito.version>1.10.19</mockito.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -18,6 +22,14 @@
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.13</version>
+		</dependency>
+
+		<!-- Mockito Dependency -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${mockito.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
